[project]
name = "lark-compress-demo"
version = "0.1.0"
description = "Demo repository to reproduce and fix a bug in the lark library."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv.sources]
parser-repr = { workspace = true }
parser-fix = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]
