[project]
name = "calculator-fix"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "parser-fix",
]

[project.scripts]
calc = "calculator_fix.main:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
parser-fix = { workspace = true }
