[project]
name = "calculator-repr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "parser-repr",
]

[project.scripts]
calc = "calculator_repr.main:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
parser-repr = { workspace = true }
